# wowmax-stellar-contracts

./: .env.example  .gitignore  NOTICE  README.md  configs.json
contracts/: Cargo.toml  Makefile
contracts/adapters/aqua/: Cargo.toml  Makefile
contracts/adapters/aqua/src/: event.rs  lib.rs  protocol_interface.rs  test.rs
contracts/adapters/aqua/src/test/: initialize.rs  swap_exact_tokens_for_tokens.rs  swap_tokens_for_exact_tokens.rs
contracts/adapters/comet/: Cargo.toml  Makefile
contracts/adapters/comet/src/: event.rs  lib.rs  protocol_interface.rs
contracts/adapters/comet/src/test/: initialize.rs  swap_exact_tokens_for_tokens.rs  swap_tokens_for_exact_tokens.rs
contracts/adapters/interface/: Cargo.toml
contracts/adapters/phoenix/: Cargo.toml  Makefile
contracts/adapters/phoenix/src/: event.rs  lib.rs  protocol_interface.rs  storage.rs  test.rs
contracts/adapters/phoenix/src/test/: initialize.rs  swap_exact_tokens_for_tokens.rs  swap_tokens_for_exact_tokens.rs
contracts/adapters/soroswap/: Cargo.toml  Makefile
contracts/adapters/soroswap/src/: lib.rs  protocol_interface.rs  storage.rs  test.rs
contracts/adapters/soroswap/src/test/: initialize.rs  swap_exact_tokens_for_tokens.rs  swap_tokens_for_exact_tokens.rs
contracts/deployer/: Cargo.toml  Makefile
contracts/deployer/src/: test.rs
contracts/router/: Cargo.toml  Makefile
contracts/router/src/: error.rs  event.rs  lib.rs  storage.rs  test.rs
contracts/router/src/adapters/: aqua.rs  comet.rs  phoenix.rs  soroswap.rs
contracts/router/src/test/: admin.rs  budget_cpu_mem.rs  events.rs  get_adapters.rs  initialize.rs  phoenix_setup.rs  remove_adapter.rs  set_pause_get_paused.rs  soroswap_setup.rs  swap_exact_tokens_for_tokens.rs  swap_tokens_for_exact_tokens.rs  update_adapters.rs
docs/: D1-REPORT.md  REPORT.md
docs/d1-evidence/: benchmark-output.txt  benchmark.json
docs/evidence/: mainnet-tx.md  split-plan.json
public/: mainnet.contracts.json
