[workspace]
members = ["adapters/*", "router", "deployer", "test-utils"]
resolver = "2"

[workspace.package]
version = "2.0.0"
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/wowswap-io/wowmax-stellar-contracts"
homepage = "https://github.com/wowswap-io/wowmax-stellar-contracts"

[workspace.dependencies]
soroban-sdk = "22.0.7"
wowmax-adapter-interface={path="./adapters/interface", package="wowmax-adapter-interface"}
test-utils = { path = "./test-utils" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
