[package]
name = "wowmax-stellar-deployer"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
description = "Deployer helper contract for WowmaxStellarRouter adapters."
homepage = { workspace = true }
repository = { workspace = true }
authors = ["coderipper <joaquin@paltalabs.io>"]
readme = "README.md"
keywords = ["no_std", "wasm", "soroswap", "amm", "soroban"]
publish = true

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
wowmax-adapter-interface = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }