[package]
name = "wowmax-stellar-router"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
description = "WOWMAX Stellar Router — main DEX aggregator contract that dispatches swaps across protocol adapters (Soroswap, Phoenix, Aquarius, CometDEX)."
homepage = { workspace = true }
repository = { workspace = true }
authors = ["coderipper <joaquin@paltalabs.io>, esteblock"]
readme = "README.md"
keywords = ["no_std", "wasm", "soroswap", "amm", "soroban"]
publish = true

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
wowmax-adapter-interface = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
test-utils = { workspace = true, features = ["testutils"] }