[package]
name = "wowmax-stellar-router"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
description = "WOWMAX Stellar Router — on-chain cross-protocol DEX aggregator. Executes split + multi-hop routes that mix Soroswap, Phoenix, and Aquarius pools atomically in a single InvokeHostFunction, hitting exact pools (Aquarius pool_index, Soroswap pairs, Phoenix pools)."
homepage = { workspace = true }
repository = { workspace = true }
authors = ["WOWMAX"]
keywords = ["no_std", "wasm", "soroban", "dex", "aggregator"]
publish = true

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
